finished card page and fixes mobile version for prev pages

--- a/src/pug/inc/mixins.pug
+++ b/src/pug/inc/mixins.pug
@@ -6,15 +6,14 @@ mixin catalog(title, subtitle)
           h2.catalog__title(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") #{ title }
           p.catalog__counter(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") (8)
       if subtitle
-        p.catalog__subtitle(data-sal="fade" data-sal-duration="400" data-sal-delay="100" data-sal-easing="ease-in-sine") #{ subtitle }
+        p.catalog__subtitle(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") #{ subtitle }
       .catalog__items
         - var n = 0;
-        - var animDelay = [0, 200, 400, 600, 0, 200, 400, 600];
         while n < 8
-          .catalog__item(data-sal="fade" data-sal-duration="400" data-sal-delay=`${animDelay[n]}` data-sal-easing="ease-in-sine")
-            a.catalog__item-img(href="#") 
+          .catalog__item(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine")
+            a.catalog__item-img(href="/card.html" data-link="redirect") 
               img(src=`${imgPath}catalog/good-${n + 1}.png` alt="good-image")
             .catalog__item-info 
-              a.catalog__item-caption(href="#") Golden bro
+              a.catalog__item-caption(href="/card.html" data-link="redirect") Golden bro
               p.catalog__item-descr Для красного вина
           - n++;
