--- a/src/pug/parts/main-page/factory.pug
+++ b/src/pug/parts/main-page/factory.pug
@@ -2,15 +2,10 @@ include ../../inc/settings.pug
 
 section.factory
   .factory__wrap 
-    h2.factory__title(data-sal="fade" data-sal-duration="400" data-sal-delay="100" data-sal-easing="ease-in-sine") Завод
-    img.factory__heading(
-      src=`${imgPath}main-page/factory/heading.svg`
-      alt="factory-heading"
-      data-sal="fade"
-      data-sal-duration="400"
-      data-sal-easing="ease-in-sine")
+    h2.factory__title(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Завод
+    .factory__heading(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") GLASSTAR
     .factory__subblock
-      p.factory__text(data-sal="fade" data-sal-duration="400" data-sal-delay="200" data-sal-easing="ease-in-sine") Гусь-Хрустальный стекольный завод основан в 1996 году. За 25 лет мы стали лидером производства посуды с титановой обработкой в России. Мы выпускаем 16 миллионов товаров в месяц, и с каждым годом накапливаем производственные мощности
+      p.factory__text(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Гусь-Хрустальный стекольный завод основан в 1996 году. За 25 лет мы стали лидером производства посуды с титановой обработкой в России. Мы выпускаем 16 миллионов товаров в месяц, и с каждым годом накапливаем производственные мощности
       button.factory__btn.button(href="#" data-sal="fade" data-sal-duration="300" data-sal-easing="ease-in-sine") 
         span подробнее
         svg(width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg")
