--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,3 +19,4 @@
 @import "./pages/main-page/main-page.scss";
 @import "./pages/catalog-page/catalog-page.scss";
 @import "./pages/catalog-inner-page/catalog-products.scss";
+@import "./pages/card-page/card-page.scss";
