--- a/src/pug/parts/main-page/technology.pug
+++ b/src/pug/parts/main-page/technology.pug
@@ -5,13 +5,13 @@ section.technology(data-aos="fade-up")
     source(srcset=`${imgPath}main-page/technology/technology-bg.png` media="(max-width: 576px)")
     img(src=`${imgPath}main-page/technology/technology-bg.png` alt="technology-image")
   .technology__wrap 
-    h2.technology__title(data-sal="fade" data-sal-duration="400" data-sal-delay="100" data-sal-easing="ease-in-sine") Технология
+    h2.technology__title(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Технология
     .technology__content 
-      button.technology__video-btn(data-sal="zoom-in" data-sal-duration="400" data-sal-delay="200" data-sal-easing="ease-in-sine") 
+      button.technology__video-btn(data-sal="zoom-in" data-sal-duration="400" data-sal-easing="ease-in-sine") 
         span.technology__video-btn-text Ti
         span.technology__video-btn-lines
-      h3.technology__heading(data-sal="fade" data-sal-duration="400" data-sal-delay="200" data-sal-easing="ease-in-sine") Titanium Content
-      p.technology__text(data-sal="fade" data-sal-duration="400" data-sal-delay="300" data-sal-easing="ease-in-sine") Титановая обработка безвредна, гипоалергенна. В производственном процессе не используется крастка
+      h3.technology__heading(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Titanium Content
+      p.technology__text(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Титановая обработка безвредна, гипоалергенна. В производственном процессе не используется крастка
       button.technology__btn.button(href="#" data-sal="fade" data-sal-duration="300" data-sal-easing="ease-in-sine")
         span подробнее
         svg(width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg")
