--- a/src/scss/base/catalog.scss
+++ b/src/scss/base/catalog.scss
@@ -2,13 +2,10 @@
   .main-page & {
     padding: toRem(100) toRem(65) toRem(120) toRem(60);
     @include to(1200px) {
-      padding: 62px 20px 75px 20px;
-    }
-    @include to(992px) {
-      padding: 80px 20px 90px 20px;
+      padding: 65px 20px;
     }
     @include to(576px) {
-      padding: 100px 0;
+      padding: 65px 0 65px 0;
     }
   }
   .catalog-page & {
@@ -33,6 +30,21 @@
     }
     @include to(992px) {
       padding-top: 30px;
+    }
+  }
+  .card-page & {
+    padding: toRem(200) toRem(65) 0 toRem(65);
+    @include to(1200px) {
+      padding: 125px 20px 0 20px;
+    }
+    @include to(992px) {
+      padding-top: 105px;
+    }
+    @include to(768px) {
+      padding-top: 85px;
+    }
+    @include to(576px) {
+      padding: 60px 0 0 0;
     }
   }
   &__wrap {
@@ -63,19 +75,17 @@
   &__counter {
     font-style: italic;
     font-weight: 350;
-    font-size: toRem(32);
-    line-height: toRem(39);
+    font-size: toRem(60);
+    line-height: 100%;
     letter-spacing: -0.03em;
     color: #ffffff;
     margin-left: toRem(25);
     @include to(1200px) {
       margin-left: 15px;
-      font-size: 20px;
-      line-height: 24px;
+      font-size: 37.5px;
     }
     @include to(992px) {
       font-size: 32px;
-      line-height: 39px;
     }
     @include to(576px) {
       margin-left: 0;
