--- a/src/scss/base/footer.scss
+++ b/src/scss/base/footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  overflow-x: hidden;
   .main-page & {
     padding: toRem(120) toRem(65);
     @include to(1200px) {
@@ -25,6 +24,21 @@
     }
     @include to(992px) {
       padding: 75px 20px 35px 20px;
+    }
+  }
+  .card-page & {
+    padding: toRem(240) toRem(65) toRem(120) toRem(65);
+    @include to(1200px) {
+      padding: 150px 20px 75px 20px;
+    }
+    @include to(992px) {
+      padding: 120px 20px 60px 20px;
+    }
+    @include to(768px) {
+      padding: 90px 20px 45px 20px;
+    }
+    @include to(576px) {
+      padding: 60px 20px 35px 20px;
     }
   }
   &__wrap {
@@ -285,7 +299,7 @@
   }
   &__developedby {
     margin-top: toRem(45);
-    font-weight: 400;
+    font-weight: 350;
     font-size: toRem(22);
     line-height: toRem(25);
     letter-spacing: -0.03em;
