--- a/src/scss/pages/main-page/factory.scss
+++ b/src/scss/pages/main-page/factory.scss
@@ -9,7 +9,13 @@
       min-height: 700px;
     }
     @include to(992px) {
-      padding: 30px 20px;
+      padding-top: 50px;
+    }
+    @include to(768px) {
+      padding-top: 40px;
+    }
+    @include to(576px) {
+      padding-top: 32px;
       min-height: 600px;
     }
   }
@@ -28,19 +34,25 @@
     }
   }
   &__heading {
-    display: block;
     margin-top: toRem(100);
-    max-width: 100%;
-    width: 100%;
-    height: auto;
+    font-weight: 350;
+    font-size: toRem(324);
+    line-height: 100%;
+    letter-spacing: 1rem;
+    color: transparent;
+    -webkit-text-stroke: 3px #fff;
     @include to(1200px) {
       margin-top: 60px;
     }
     @include to(992px) {
+      -webkit-text-stroke: 2px #fff;
       margin-top: 40px;
     }
     @include to(768px) {
       margin-top: 20px;
+    }
+    @include to(576px) {
+      letter-spacing: 0;
     }
   }
   &__subblock {
@@ -53,7 +65,7 @@
       margin-top: 50px;
     }
     @include to(992px) {
-      margin-top: 35px;
+      margin-top: 30px;
       flex-flow: column nowrap;
       justify-content: initial;
       align-items: initial;
