created technology, about and contact page

--- a/src/pug/inc/footer.pug
+++ b/src/pug/inc/footer.pug
@@ -2,9 +2,9 @@ footer.footer
   .footer__wrap
     .footer__nav 
       .footer__nav-item.footer__nav-item_row
-        a.footer__link(href="#" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") технология
-        a.footer__link(href="#" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") компания
-        a.footer__link(href="#" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") контакты
+        a.footer__link(href="/technology.html" data-link="redirect" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") технология
+        a.footer__link(href="/about.html" data-link="redirect" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") компания
+        a.footer__link(href="/contact.html" data-link="redirect" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") контакты
       .footer__nav-item
         a.footer__link.footer__link_big(
           data-sal="fade"
@@ -35,4 +35,4 @@ footer.footer
       .footer__developedby(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine")
         | design & develompent at&nbsp;
         br
-        a(href="#") vse.digital
+        a(href="https://vse.digital" blank="_target") vse.digital
