--- a/src/pug/inc/header.pug
+++ b/src/pug/inc/header.pug
@@ -4,13 +4,13 @@ header.header(data-header="block")
       a.header__link(href="/catalog.html" data-link="redirect")
         span.header__link-text Продукция
         span.header__link-count 01.
-      a.header__link(href="#")
+      a.header__link(href="/technology.html" data-link="redirect")
         span.header__link-text Технология
         span.header__link-count 02.
-      a.header__link(href="#")
+      a.header__link(href="/about.html" data-link="redirect")
         span.header__link-text Завод
         span.header__link-count 03.
-      a.header__link(href="#")
+      a.header__link(href="/contact.html" data-link="redirect")
         span.header__link-text Контакты
         span.header__link-count 04.
     a.header__logo(href="/" data-link="redirect") Glasstar
@@ -29,13 +29,13 @@ header.header(data-header="block")
       a.header__link(href="/catalog.html" data-link="redirect")
         span.header__link-text Продукция
         span.header__link-count 01.
-      a.header__link(href="#")
+      a.header__link(href="/technology.html" data-link="redirect")
         span.header__link-text Технология
         span.header__link-count 02.
-      a.header__link(href="#")
+      a.header__link(href="/about.html" data-link="redirect")
         span.header__link-text Завод
         span.header__link-count 03.
-      a.header__link(href="#")
+      a.header__link(href="/contact.html" data-link="redirect")
         span.header__link-text Контакты
         span.header__link-count 04.
     .header__contacts
