--- a/src/scss/base/templates.scss
+++ b/src/scss/base/templates.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   padding: toRem(20);
   border: 2px solid #ffffff;
-  background-color: transparent;
+  background: transparent;
   font-weight: 350;
   font-size: toRem(24);
   line-height: 100%;
