--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,3 +20,6 @@
 @import "./pages/catalog-page/catalog-page.scss";
 @import "./pages/catalog-inner-page/catalog-products.scss";
 @import "./pages/card-page/card-page.scss";
+@import "./pages/technology-page/technology-page.scss";
+@import "./pages/about-page/about-page.scss";
+@import "./pages/contact-page/contact-page.scss";
