--- a/src/pug/parts/main-page/technology.pug
+++ b/src/pug/parts/main-page/technology.pug
@@ -7,12 +7,30 @@ section.technology(data-aos="fade-up")
   .technology__wrap 
     h2.technology__title(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Технология
     .technology__content 
-      button.technology__video-btn(data-sal="zoom-in" data-sal-duration="400" data-sal-easing="ease-in-sine") 
+      button.technology__video-btn(
+        data-sal="zoom-in"
+        data-sal-duration="400"
+        data-sal-easing="ease-in-sine") 
         span.technology__video-btn-text Ti
         span.technology__video-btn-lines
-      h3.technology__heading(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Titanium Content
+      h3.technology__heading(
+        data-sal="fade"
+        data-sal-duration="400"
+        data-sal-easing="ease-in-sine") Titanium Content
       p.technology__text(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Титановая обработка безвредна, гипоалергенна. В производственном процессе не используется крастка
-      button.technology__btn.button(href="#" data-sal="fade" data-sal-duration="300" data-sal-easing="ease-in-sine")
+      a.technology__btn.button(
+        href="#"
+        data-sal="fade"
+        data-sal-duration="300"
+        data-sal-easing="ease-in-sine")
         span подробнее
-        svg(width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg")
-          path(d="M0.717518 15.8597L14.8597 1.71753M14.8597 1.71753H1.42462M14.8597 1.71753V15.1526" stroke="white" stroke-width="2")
+        svg(
+          width="16"
+          height="17"
+          viewBox="0 0 16 17"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg")
+          path(
+            d="M0.717518 15.8597L14.8597 1.71753M14.8597 1.71753H1.42462M14.8597 1.71753V15.1526"
+            stroke="white"
+            stroke-width="2")
