--- a/src/scss/base/animation.scss
+++ b/src/scss/base/animation.scss
@@ -39,3 +39,13 @@
     }
   }
 }
+
+@keyframes slideInRightLoader {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+}
