--- a/src/scss/pages/card-page/card-promo.scss
+++ b/src/scss/pages/card-page/card-promo.scss
@@ -42,13 +42,14 @@
     line-height: toRem(36);
     letter-spacing: -0.03em;
     color: #ffffff;
-    padding-bottom: 3px;
+    padding-bottom: toRem(5);
     transition: opacity 0.3s ease-in-out;
     &:hover {
       opacity: 0.6;
       transition: opacity 0.3s ease-in-out;
     }
     @include to(1200px) {
+      padding-bottom: 3px;
       max-width: 90px;
       font-size: 14px;
       line-height: 22px;
@@ -131,8 +132,9 @@
       line-height: toRem(36);
       letter-spacing: -0.03em;
       color: #ffffff;
-      margin-right: 15px;
+      margin-right: toRem(15);
       @include to(1200px) {
+        margin-right: 15px;
         font-size: 14px;
         line-height: 22px;
       }
@@ -141,13 +143,14 @@
       }
     }
     &-value {
-      margin-left: 15px;
+      margin-left: toRem(15);
       font-weight: 350;
       font-size: toRem(22);
       line-height: toRem(36);
       letter-spacing: -0.03em;
       color: #ffffff;
       @include to(1200px) {
+        margin-left: 15px;
         font-size: 14px;
         line-height: 22px;
       }
@@ -183,13 +186,14 @@
     }
   }
   &__title {
-    margin-top: 5px;
+    margin-top: toRem(5);
     font-weight: 350;
     font-size: toRem(74);
     line-height: 100%;
     letter-spacing: -0.03em;
     color: #ffffff;
     @include to(1200px) {
+      margin-top: 5px;
       font-size: 45px;
     }
     @include to(992px) {
@@ -387,7 +391,7 @@
       }
     }
     &-caption {
-      font-weight: 400;
+      font-weight: 350;
       font-size: toRem(22);
       line-height: toRem(36);
       text-align: center;
