--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,10 +11,12 @@
 @import "./base/animation";
 
 @import "./base/common.scss";
+@import "./base/loader.scss";
 @import "./base/header.scss";
 @import "./base/catalog.scss";
 @import "./base/goods.scss";
 @import "./base/footer.scss";
+@import "./base/modal.scss";
 
 @import "./pages/main-page/main-page.scss";
 @import "./pages/catalog-page/catalog-page.scss";
