--- a/src/scss/pages/card-page/card-descr.scss
+++ b/src/scss/pages/card-page/card-descr.scss
@@ -52,9 +52,10 @@
       letter-spacing: -0.03em;
       color: #ffffff;
       flex: 0 1 auto;
-      margin-right: 15px;
+      margin-right: toRem(15);
       color: rgba(255, 255, 255, 0.6);
       @include to(1200px) {
+        margin-right: 15px;
         font-size: 22px;
         line-height: 24px;
       }
@@ -69,7 +70,7 @@
       }
     }
     &-value {
-      margin-left: 15px;
+      margin-left: toRem(15);
       flex: 0 1 toRem(590);
       font-weight: 350;
       font-size: toRem(22);
@@ -77,6 +78,7 @@
       letter-spacing: -0.03em;
       color: #ffffff;
       @include to(1200px) {
+        margin-left: 15px;
         flex: 0 1 370px;
         font-size: 14px;
         line-height: 18px;
