--- a/src/scss/pages/contact-page/contact-page.scss
+++ b/src/scss/pages/contact-page/contact-page.scss
@@ -54,7 +54,10 @@
     display: flex;
     flex-flow: column nowrap;
     align-items: flex-end;
-    margin-right: 15px;
+    margin-right: toRem(15);
+    @include to(1200px) {
+      margin-right: 15px;
+    }
     @include to(992px) {
       justify-content: space-between;
     }
@@ -103,9 +106,10 @@
     flex: 0 1 toRem(430);
     display: flex;
     flex-flow: column nowrap;
-    margin-left: 15px;
+    margin-left: toRem(15);
     justify-content: space-between;
     @include to(1200px) {
+      margin-left: 15px;
       flex: 0 1 270px;
     }
     @include to(576px) {
@@ -141,7 +145,7 @@
     &-addr {
       margin-top: toRem(22);
       font-style: normal;
-      font-weight: 400;
+      font-weight: 350;
       font-size: toRem(22);
       line-height: toRem(28);
       letter-spacing: -0.03em;
@@ -248,47 +252,13 @@
         gap: 20px;
       }
     }
-    &-input,
-    &-textarea {
-      outline: none;
-      background: transparent;
-      border: none;
-      font-weight: 350;
-      font-size: toRem(22);
-      line-height: toRem(36);
-      letter-spacing: -0.03em;
-      color: #ffffff;
-      padding-bottom: 10px;
-      border-bottom: 1px solid #303030;
-      transition: border 0.3s;
-      @include to(1200px) {
-        font-size: 16px;
-        line-height: 20px;
-      }
-      @include to(992px) {
-        font-size: 18px;
-        line-height: 22px;
-      }
-      @include to(768px) {
-        font-size: 20px;
-        line-height: 24px;
-      }
-      @include to(576px) {
-        font-size: 22px;
-        line-height: 36px;
-      }
-      &:focus {
-        border-color: #fff;
-        transition: border 0.3s;
-      }
-      &::placeholder {
-        color: #303030;
-      }
-    }
     &-textarea {
       resize: none;
-      height: 40px;
+      height: toRem(50);
       grid-column: span 2;
+      @include to(1200px) {
+        height: 40px;
+      }
       @include to(576px) {
         grid-column: initial;
       }
@@ -318,9 +288,10 @@
       align-items: flex-start;
       position: relative;
       flex: 0 1 toRem(350);
-      margin-right: 15px;
+      margin-right: toRem(15);
       @include to(1200px) {
         flex: 0 1 250px;
+        margin-right: 15px;
       }
       @include to(576px) {
         align-items: center;
@@ -343,13 +314,14 @@
       }
       &-checkmark {
         flex: 0 0 toRem(28);
-        margin-right: 15px;
+        margin-right: toRem(15);
         position: relative;
         width: toRem(28);
         height: toRem(28);
         border: 1px solid #303030;
         background: transparent;
         @include to(1200px) {
+          margin-right: 15px;
           flex: 0 0 15px;
           width: 15px;
           height: 15px;
